[package]
name = "IPSP-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ipsp_plugin"


[dependencies]
bluez-async = "0.6.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"]}
async-ctrlc = { version = "1.2.0", features = ["stream"] }
futures = "0.3.24"

env_logger = "0.9.0"
log = "0.4.17"